--- a/zor-beginner/README
+++ b/zor-beginner/README
@@ -1,23 +1,28 @@
-Level 3
+Level 5
 
-The air feels thicker than before. There must be a horde of sludge.
+You hear cries for help. Captives must need rescuing.
 
-Tip: Be careful not to die! Use `warrior.health()` to keep an eye on your health, and `warrior.rest()` to earn 10% of max health back.
+Tip: Use `warrior.feel().isCaptive()` to see if there is a captive and `warrior.rescue()` to rescue him. Don't attack captives.
 
 
- ---------
-|@ s ss s>|
- ---------
+ -------
+|@ CaaSC|
+ -------
 
 
   > = Stairs
   @ = Zor (20 HP)
-  s = Sludge (12 HP)
+  C = Captive (1 HP)
+  a = Archer (7 HP)
+  S = Thick Sludge (24 HP)
 
 
 Warrior Abilities:
 
   Actions:
+  
+    warrior.rescue()
+      Rescue a captive from his chains (earning 20 points) in given direction (forward by default).
   
     warrior.rest()
       Gain 10% of max health back, but do nothing more.
